# GoldMiningFinancialModellingTool

./: Cargo.toml  allphavantage
src/: main.rs
