[package]
name = "goldmodel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = "2.1.0"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.3"
time = "0.3.30"
reqwest = { version = "0.11", features = ["blocking"] }
select = "0.6"
html5ever = "0.26"
tendril = "0.4"
scraper = "0.17.1"
